--- a/tests/org.eclipse.reddeer.e4.workbench.test/pom.xml
+++ b/tests/org.eclipse.reddeer.e4.workbench.test/pom.xml
@@ -38,4 +38,12 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>e4.workbench-tests</id>
+			<properties>
+				<skipTests>false</skipTests>
+			</properties>
+		</profile>
+	</profiles>
 </project>
