--- a/tests/org.eclipse.reddeer.gef.test/pom.xml
+++ b/tests/org.eclipse.reddeer.gef.test/pom.xml
@@ -61,4 +61,12 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>gef-tests</id>
+			<properties>
+				<skipTests>false</skipTests>
+			</properties>
+		</profile>
+	</profiles>
 </project>
