--- a/tests/org.eclipse.reddeer.jface.test/pom.xml
+++ b/tests/org.eclipse.reddeer.jface.test/pom.xml
@@ -60,5 +60,12 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<profile>
+			<id>jface-tests</id>
+			<properties>
+				<skipTests>false</skipTests>
+			</properties>
+		</profile>
 	</profiles>
 </project>
