--- a/tests/org.eclipse.reddeer.junit.test/pom.xml
+++ b/tests/org.eclipse.reddeer.junit.test/pom.xml
@@ -58,4 +58,12 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>junit-tests</id>
+			<properties>
+				<skipTests>false</skipTests>
+			</properties>
+		</profile>
+	</profiles>
 </project>
