--- a/tests/org.eclipse.reddeer.requirements.test/pom.xml
+++ b/tests/org.eclipse.reddeer.requirements.test/pom.xml
@@ -67,6 +67,13 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<profile>
+			<id>requirements-tests</id>
+			<properties>
+				<skipTests>false</skipTests>
+			</properties>
+		</profile>
 	</profiles>
 
 	<build>
