SLE-1083: Change groupId of the Maven Artifacts
We have to change the Maven `groupId` (not the actual bundle identifiers) to `org.sonarsource.eclipse.reddeer` in order to be able to deploy the artifacts to Repox.

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -17,7 +17,7 @@
 	<name>RedDeer Site</name>
 	<packaging>eclipse-repository</packaging>
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>parent</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
