--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -15,7 +15,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.eclipse.reddeer</groupId>
+	<groupId>org.sonarsource.eclipse.reddeer</groupId>
 	<version>4.7.0-SNAPSHOT</version>
 	<artifactId>eclipse-reddeer-archetype</artifactId>
 	<packaging>maven-archetype</packaging>
