--- a/features/org.eclipse.reddeer.logparser.feature/pom.xml
+++ b/features/org.eclipse.reddeer.logparser.feature/pom.xml
@@ -18,7 +18,7 @@
 	<packaging>eclipse-feature</packaging>
   
   	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>features</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
