--- a/features/pom.xml
+++ b/features/pom.xml
@@ -14,11 +14,11 @@
 	
 	<modelVersion>4.0.0</modelVersion>
     <parent>
-            <groupId>org.eclipse.reddeer</groupId>
+            <groupId>org.sonarsource.eclipse.reddeer</groupId>
             <artifactId>parent</artifactId>
             <version>4.7.0-SNAPSHOT</version>
     </parent>
-	<groupId>org.eclipse.reddeer</groupId>
+	<groupId>org.sonarsource.eclipse.reddeer</groupId>
 	<artifactId>features</artifactId>
 	<name>RedDeer Features</name>
 	<packaging>pom</packaging>
