--- a/jacoco-report/pom.xml
+++ b/jacoco-report/pom.xml
@@ -18,7 +18,7 @@
 	<packaging>pom</packaging>
 
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>parent</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
@@ -26,205 +26,205 @@
 	<!-- Used by JaCoCo to generate an aggregated report -->
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.codegen</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.common</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.common.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.core</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.core.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.direct</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.direct.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.eclipse</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.eclipse.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.gef</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.gef.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.gef.spy</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.go</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.graphiti</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.graphiti.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.jface</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.jface.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.junit</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.junit.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.junit.extension</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.logparser</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.recorder</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.requirements</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.requirements.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.spy</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.swt</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.swt.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.ui</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.ui.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.uiforms</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.uiforms.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.workbench</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.workbench.test</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.workbench.core</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
