--- a/plugins/org.eclipse.reddeer.e4.workbench/pom.xml
+++ b/plugins/org.eclipse.reddeer.e4.workbench/pom.xml
@@ -18,7 +18,7 @@
 	<packaging>eclipse-plugin</packaging>
 	
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>plugins</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
