--- a/plugins/org.eclipse.reddeer.gef.spy/pom.xml
+++ b/plugins/org.eclipse.reddeer.gef.spy/pom.xml
@@ -13,7 +13,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
         <artifactId>plugins</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
