--- a/plugins/org.eclipse.reddeer.junit/pom.xml
+++ b/plugins/org.eclipse.reddeer.junit/pom.xml
@@ -17,7 +17,7 @@
 	<name>RedDeer JUnit</name>
 	<packaging>eclipse-plugin</packaging>
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>plugins</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
