--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -16,7 +16,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>parent</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
