--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.eclipse.reddeer</groupId>
+	<groupId>org.sonarsource.eclipse.reddeer</groupId>
 	<artifactId>parent</artifactId>
 	<name>RedDeer Parent POM File</name>
 	<version>4.7.0-SNAPSHOT</version>
