--- a/test-apps/org.eclipse.reddeer.e4/pom.xml
+++ b/test-apps/org.eclipse.reddeer.e4/pom.xml
@@ -18,7 +18,7 @@
 	<packaging>eclipse-plugin</packaging>
 
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>test-apps</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
