--- a/tests/org.eclipse.reddeer.core.test/pom.xml
+++ b/tests/org.eclipse.reddeer.core.test/pom.xml
@@ -19,7 +19,7 @@
 	
 	
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>tests</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
@@ -27,7 +27,7 @@
 	<!-- Used by JaCoCo to generate an aggregated report -->
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.core</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
