--- a/tests/org.eclipse.reddeer.integration.test/pom.xml
+++ b/tests/org.eclipse.reddeer.integration.test/pom.xml
@@ -19,7 +19,7 @@
 	<packaging>eclipse-test-plugin</packaging>
 	
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>tests</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
