--- a/tests/org.eclipse.reddeer.jface.test/pom.xml
+++ b/tests/org.eclipse.reddeer.jface.test/pom.xml
@@ -18,7 +18,7 @@
 	<packaging>eclipse-test-plugin</packaging>
 
 	<parent>
-		<groupId>org.eclipse.reddeer</groupId>
+		<groupId>org.sonarsource.eclipse.reddeer</groupId>
 		<artifactId>tests</artifactId>
 		<version>4.7.0-SNAPSHOT</version>
 	</parent>
@@ -26,7 +26,7 @@
 	<!-- Used by JaCoCo to generate an aggregated report -->
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.reddeer</groupId>
+			<groupId>org.sonarsource.eclipse.reddeer</groupId>
 			<artifactId>org.eclipse.reddeer.jface</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
