SLE-1083: Change Cirrus CI logic to deploy and promote correctly

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -59,12 +59,17 @@ build_task:
     cpu: 4
     memory: 4G
     type: m6a.large
+  env:
+    ARTIFACTORY_DEPLOY_REPO: sonarsource-public-qa
+    ARTIFACTORY_DEPLOY_USERNAME: vault-${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-qa-deployer
+    ARTIFACTORY_DEPLOY_PASSWORD: VAULT[development/artifactory/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-qa-deployer access_token]
+    DEPLOY_PULL_REQUEST: true
   build_script: |
     source cirrus-env BUILD
     source .cirrus/set_maven_build_version "$BUILD_NUMBER"
-    mvn clean verify \
+    mvn clean deploy \
       -B -e -V \
-      -Pbuild-archetype
+      -Pdeploy-sonarsource
   always:
     p2_artifacts:
       paths: site/target/org.eclipse.reddeer.site-*.zip
@@ -196,6 +201,8 @@ promote_task:
     memory: 2G
     type: m6a.large
   env:
+    ARTIFACTORY_DEPLOY_REPO: sonarsource-public-qa
+    ARTIFACTORY_PROMOTE_ACCESS_TOKEN: VAULT[development/artifactory/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-promoter access_token]
     GITHUB_TOKEN: VAULT[development/github/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-promotion token]
   promote_script:
     .cirrus/cirrus_promote_maven
