--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,4 +14,5 @@ jobs:
     uses: SonarSource/gh-action_release/.github/workflows/main.yaml@34d8b20d125bfd58d124e84b007d3a18e61c358a # 5.10.4
     with:
       publishToBinaries: true
+      skipPythonReleasabilityChecks: true
       slackChannel: squad-ide-eclipse
