--- a/pom.xml
+++ b/pom.xml
@@ -292,70 +292,103 @@
 			the environment variables are coming from the Cirrus CI pipeline here.
 		-->
 		<profile>
-			<id>deploy-sonarsource</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jfrog.buildinfo</groupId>
-						<artifactId>artifactory-maven-plugin</artifactId>
-						<version>${version.artifactory.plugin}</version>
-						<executions>
-							<execution>
-								<id>build-info</id>
-								<goals>
-									<goal>publish</goal>
-								</goals>
-								<configuration>
-									<artifactory>
-										<envVarsIncludePatterns>
-											GIT_SHA1,
-											GITHUB_BRANCH,
-											ARTIFACTS_TO_PUBLISH,
-											*_VERSION,
-											JAVA,
-											CIRRUS_CHANGE_MESSAGE,
-											PROJECT,
-											ARTIFACTORY_DEPLOY_REPO,
-											ARTIFACTORY_DEPLOY_USERNAME,
-											ARTIFACTORY_PRIVATE_USERNAME,
-											BUILD_NUMBER
-										</envVarsIncludePatterns>
-										<includeEnvVars>true</includeEnvVars>
-										<timeoutSec>60</timeoutSec>
-									</artifactory>
-									<deployProperties>
-										<vcs.revision>{{GIT_COMMIT}}</vcs.revision>
-										<vcs.branch>{{GIT_BRANCH}}</vcs.branch>
-										<build.name>${gitRepositoryName}</build.name>
-										<build.number>{{BUILD_NUMBER}}</build.number>
-									</deployProperties>
-									<licenses>
-										<autoDiscover>true</autoDiscover>
-										<includePublishedArtifacts>false</includePublishedArtifacts>
-										<runChecks>true</runChecks>
-										<scopes>project,provided</scopes>
-										<violationRecipients>licences-control@sonarsource.com</violationRecipients>
-									</licenses>
-									<publisher>
-										<contextUrl>{{ARTIFACTORY_URL}}</contextUrl>
-										<repoKey>{{ARTIFACTORY_DEPLOY_REPO}}</repoKey>
-										<username>{{ARTIFACTORY_DEPLOY_USERNAME}}</username>
-										<password>{{ARTIFACTORY_DEPLOY_PASSWORD}}</password>
-										<publishBuildInfo>true</publishBuildInfo>
-										<publishArtifacts>${artifactory.publish.artifacts}</publishArtifacts>
-									</publisher>
-									<buildInfo>
-										<buildName>${gitRepositoryName}</buildName>
-										<buildNumber>{{BUILD_NUMBER}}</buildNumber>
-										<buildUrl>{{BUILD_URL}}</buildUrl>
-										<vcsRevision>{{GIT_COMMIT}}</vcsRevision>
-									</buildInfo>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+		      <id>deploy-sonarsource</id>
+		      <build>
+		        <plugins>
+		          <plugin>
+		            <groupId>org.apache.maven.plugins</groupId>
+		            <artifactId>maven-enforcer-plugin</artifactId>
+		            <executions>
+		              <execution>
+		                <id>enforce-deploy-settings</id>
+		                <goals>
+		                  <goal>enforce</goal>
+		                </goals>
+		                <configuration>
+		                  <rules>
+		                    <requireProperty>
+		                      <property>gitRepositoryName</property>
+		                      <message>You must set name of Git repository in your pom</message>
+		                    </requireProperty>
+		                    <requireEnvironmentVariable>
+		                      <variableName>ARTIFACTORY_URL</variableName>
+		                    </requireEnvironmentVariable>
+		                    <requireEnvironmentVariable>
+		                      <variableName>ARTIFACTORY_DEPLOY_REPO</variableName>
+		                    </requireEnvironmentVariable>
+		                    <requireEnvironmentVariable>
+		                      <variableName>ARTIFACTORY_DEPLOY_USERNAME</variableName>
+		                    </requireEnvironmentVariable>
+		                    <requireEnvironmentVariable>
+		                      <variableName>ARTIFACTORY_DEPLOY_PASSWORD</variableName>
+		                    </requireEnvironmentVariable>
+		                  </rules>
+		                  <fail>true</fail>
+		                </configuration>
+		              </execution>
+		            </executions>
+		          </plugin>
+		          <plugin>
+		            <groupId>org.jfrog.buildinfo</groupId>
+		            <artifactId>artifactory-maven-plugin</artifactId>
+		            <version>${version.artifactory.plugin}</version>
+		            <executions>
+		              <execution>
+		                <id>build-info</id>
+		                <goals>
+		                  <goal>publish</goal>
+		                </goals>
+		                <configuration>
+		                  <artifactory>
+		                    <envVarsIncludePatterns>
+		                      GIT_SHA1,
+		                      GITHUB_BRANCH,
+		                      ARTIFACTS_TO_PUBLISH,
+		                      *_VERSION,
+		                      JAVA,
+		                      CIRRUS_CHANGE_MESSAGE,
+		                      PROJECT,
+		                      ARTIFACTORY_DEPLOY_REPO,
+		                      ARTIFACTORY_DEPLOY_USERNAME,
+		                      ARTIFACTORY_PRIVATE_USERNAME,
+		                      BUILD_NUMBER
+		                    </envVarsIncludePatterns>
+		                    <includeEnvVars>true</includeEnvVars>
+		                    <timeoutSec>60</timeoutSec>
+		                  </artifactory>
+		                  <deployProperties>
+		                    <vcs.revision>{{GIT_COMMIT|TRAVIS_COMMIT|APPVEYOR_REPO_COMMIT|BUILD_SOURCEVERSION}}</vcs.revision>
+		                    <vcs.branch>{{GIT_BRANCH|TRAVIS_BRANCH|APPVEYOR_REPO_BRANCH|SYSTEM_PULLREQUEST_TARGETBRANCH|BUILD_SOURCEBRANCHNAME}}</vcs.branch>
+		                    <build.name>${gitRepositoryName}</build.name>
+		                    <build.number>{{BUILD_ID|TRAVIS_BUILD_NUMBER|APPVEYOR_BUILD_NUMBER|BUILD_BUILDID}}</build.number>
+		                  </deployProperties>
+		                  <licenses>
+		                    <autoDiscover>true</autoDiscover>
+		                    <includePublishedArtifacts>false</includePublishedArtifacts>
+		                    <runChecks>true</runChecks>
+		                    <scopes>project,provided</scopes>
+		                    <violationRecipients>licences-control@sonarsource.com</violationRecipients>
+		                  </licenses>
+		                  <publisher>
+		                    <contextUrl>{{ARTIFACTORY_URL}}</contextUrl>
+		                    <repoKey>{{ARTIFACTORY_DEPLOY_REPO}}</repoKey>
+		                    <username>{{ARTIFACTORY_DEPLOY_USERNAME}}</username>
+		                    <password>{{ARTIFACTORY_DEPLOY_PASSWORD}}</password>
+		                    <publishBuildInfo>true</publishBuildInfo>
+		                    <publishArtifacts>${artifactory.publish.artifacts}</publishArtifacts>
+		                  </publisher>
+		                  <buildInfo>
+		                    <buildName>${gitRepositoryName}</buildName>
+		                    <buildNumber>{{BUILD_ID|TRAVIS_BUILD_NUMBER|APPVEYOR_BUILD_NUMBER|BUILD_BUILDID}}</buildNumber>
+		                    <buildUrl>{{CI_BUILD_URL|BUILD_URL}}</buildUrl>
+		                    <vcsRevision>{{GIT_COMMIT|TRAVIS_COMMIT|APPVEYOR_REPO_COMMIT|BUILD_SOURCEVERSION}}</vcsRevision>
+		                  </buildInfo>
+		                </configuration>
+		              </execution>
+		            </executions>
+		          </plugin>
+		        </plugins>
+		      </build>
+		    </profile>
 	</profiles>
 </project>
