--- a/tests/org.eclipse.reddeer.eclipse.test/pom.xml
+++ b/tests/org.eclipse.reddeer.eclipse.test/pom.xml
@@ -73,52 +73,52 @@
 						<dependency>
 							<type>p2-installable-unit</type>
 							<artifactId>org.eclipse.datatools.enablement.hsqldb.ui</artifactId>
-							<version>0.0.0</version>
+							<version>1.3.0.202305310959</version>
 						</dependency>
 						<dependency>
 							<type>p2-installable-unit</type>
 							<artifactId>org.eclipse.datatools.enablement.hsqldb.dbdefinition</artifactId>
-							<version>0.0.0</version>
+							<version>1.3.0.202305310959</version>
 						</dependency>	
 						<dependency>
 						  <type>p2-installable-unit</type>
 						  <artifactId>org.eclipse.datatools.connectivity.oda.flatfile.ui</artifactId>
-						  <version>0.0.0</version>
+						  <version>3.4.0.202305310959</version>
 						</dependency>
 						<dependency>
 						  <type>p2-installable-unit</type>
 						  <artifactId>org.eclipse.datatools.connectivity.feature.feature.group</artifactId>
-						  <version>0.0.0</version>
+						  <version>1.15.0.202305310959</version>
 						</dependency>
 						<dependency>
 							<type>p2-installable-unit</type>
 							<artifactId>org.eclipse.wst.web_ui.feature.feature.group</artifactId>
-							<version>0.0.0</version>
+							<version>3.31.0.v202308210520</version>
 						</dependency>
 						<dependency>
 							<type>p2-installable-unit</type>
 							<artifactId>org.eclipse.wst.server_adapters.feature.feature.group</artifactId>
-							<version>0.0.0</version>
+							<version>3.31.0.v202308110241</version>
 						</dependency>
 						<dependency>
 							<type>p2-installable-unit</type>
 							<artifactId>org.eclipse.rse.feature.group</artifactId>
-							<version>0.0.0</version>
+							<version>4.5.500.202305261020</version>
 						</dependency>
                         <dependency>
                             <type>p2-installable-unit</type>
                             <artifactId>org.eclipse.mylyn.ide_feature.feature.group</artifactId>
-                            <version>0.0.0</version>
+                            <version>3.26.0.v20221229-1738</version>
                         </dependency>
                         <dependency>
                             <type>p2-installable-unit</type>
                             <artifactId>org.eclipse.mylyn.bugzilla_feature.feature.group</artifactId>
-                            <version>0.0.0</version>
+                            <version>3.26.0.v20230221-1930</version>
                         </dependency>
                          <dependency>
                             <type>p2-installable-unit</type>
                             <artifactId>org.eclipse.m2e.feature.feature.group</artifactId>
-                            <version>0.0.0</version>
+                            <version>2.4.100.20230827-1557</version>
                         </dependency>
 					</dependencies>
 				</configuration>
@@ -164,7 +164,7 @@
 								<dependency>
 									<type>p2-installable-unit</type>
 									<artifactId>org.eclipse.jdt.feature.group</artifactId>
-									<version>0.0.0</version>
+									<version>3.19.200.v20230903-1000</version>
 								</dependency>
 							</dependencies>
 						</configuration>
