BUILD-9913 Testing with branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
       - uses: SonarSource/ci-github-actions/get-build-number@v1
 
-      - uses: SonarSource/ci-github-actions/config-maven@v1
+      - uses: SonarSource/ci-github-actions/config-maven@feat/smarini/BUILD-9913-addCustomTarget
         env:
           CURRENT_VERSION: skip
           PROJECT_VERSION: skip
@@ -122,7 +122,7 @@ jobs:
 
       - uses: SonarSource/ci-github-actions/get-build-number@v1
 
-      - uses: SonarSource/ci-github-actions/config-maven@master
+      - uses: SonarSource/ci-github-actions/config-maven@feat/smarini/BUILD-9913-addCustomTarget
         env:
           CURRENT_VERSION: skip
           PROJECT_VERSION: skip
